# linkedin_visualization_app

./: .env  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
init/: build_db.py  schema.sql
src/data/processed/: linkedin_data.db
src/data/raw/csv_files/: Comments.csv  Connections.csv  Reactions.csv  Shares.csv
src/domain/models/: connection.py  shares.py
src/domain/use_cases/extract_linkedin_csv_from_zip/: extract_linkedin_csv_from_zip.py  iextract_linkedin_csv_from_zip.py  test_extract_linkedin_csv_from_zip.py
src/domain/use_cases/get_all_connections/: get_all_connections.py  iget_all_connections.py  test_get_all_connections.py
src/domain/use_cases/get_all_shares/: get_all_shares.py  iget_all_shares.py  test_get_all_shares.py
src/domain/use_cases/process_connections_csv/: iprocess_connections_csv.py  process_connections_csv.py  test_process_connections_csv.py
src/domain/use_cases/process_shares_csv/: iprocess_shares_csv.py  process_shares_csv.py  test_process_shares_csv.py
src/infra/db/entities/: connections.py  shares.py
src/infra/db/repositories/: connections_repository.py  test_connections_repository.py
src/infra/db/settings/: connection.py  connection_test.py
src/infra/db/test_resources/: connection_handler_test_class.py
src/infra/web_scrap/settings/: header_config.py  test_request.py
src/presentation/: main.py  streamlit_app.py  styles.py
src/presentation/streamlit_pages/: connections.py  shares.py  test_connections_page.py  test_shares_page.py
src/utils/: dataframe_utils.py  file_handler.py  mappers.py
(+14 files in other folders)
