[tool.poetry]
name = "linkedin-visualization-app"
version = "0.1.0"
description = ""
authors = ["Gabriel Romão <gabriel-rgomes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
streamlit = "^1.30.0"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
sqlalchemy = "^2.0.25"
st-pages = "^0.4.5"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]